DemoMsUser/Cloud/all.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: demo-ms-user-deployment
  labels:
    app: demo-ms-user
spec:
  replicas: 3
  selector:
    matchLabels:
      app: demo-ms-user
  template:
    metadata:
      labels:
        app: demo-ms-user
    spec:
      containers:
        - name: ms-user
          image: khomcvla.azurecr.io/demo-ms-user:latest
          ports:
            - containerPort: 80
            - containerPort: 443
---
apiVersion: v1
kind: Service
metadata:
  name: demo-ms-user-service
  labels:
    app: demo-ms-user
spec:
  type: ClusterIP
  selector:
    app: demo-ms-user
  ports:
    - name: http
      protocol: TCP
      port: 5035
      targetPort: 80
    - name: https
      protocol: TCP
      port: 7140
      targetPort: 443
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: demo-ms-user-ingress
  labels:
    app: demo-ms-user
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/use-regex: "true"
    # nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules:
    - host: DEMO-MS-USER.TEST.DOMAIN
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: demo-ms-user-service
                port:
                  number: 80
