DemoMsUser/Cloud/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: demo-ms-user-ingress
  labels:
    app: demo-ms-user
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/use-regex: "true"
    # nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules:
    - host: DEMO-MS-USER.TEST.DOMAIN
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: demo-ms-user-service
                port:
                  number: 80
